# studio-native

./: .gitignore  CLAUDE.md  Makefile  README.md
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/plugins/pencilkit/: Cargo.toml  build.rs
src-tauri/plugins/pencilkit/ios/Sources/: PencilKitPlugin.swift  PencilKitView.swift
src-tauri/plugins/pencilkit/permissions/: default.toml
src-tauri/plugins/pencilkit/permissions/autogenerated/: reference.md
src-tauri/plugins/pencilkit/permissions/autogenerated/commands/: get_drawing.toml  set_drawing.toml  set_tool.toml
src-tauri/plugins/pencilkit/permissions/schemas/: schema.json
src-tauri/plugins/pencilkit/src/: lib.rs  mobile.rs  models.rs
src-tauri/src/: lib.rs  main.rs  menu.rs  updater.rs
src-tauri/src/browser/: commands.rs  mod.rs  state.rs  tabs.rs  toolbar.rs  webview.rs
