[package]
name = "tauri-plugin-pencilkit"
version = "0.1.0"
description = "PencilKit overlay for iPad with Apple Pencil"
edition = "2021"
links = "tauri-plugin-pencilkit"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
tauri = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
